--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../bower_components/polymerfire/firebase-app.html" />
 <link rel="import" href="../bower_components/polymerfire/firebase-auth.html" />
 <link rel="import" href="../bower_components/polymerfire/firebase-document.html" />
+<link rel="import" href="../bower_components/polymerfire/firebase-query.html" />
 <link rel="import" href="../bower_components/app-route/app-location.html" />
 <link rel="import" href="../bower_components/app-route/app-route.html" />
 <link rel="import" href="../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html" />
