added guuey-notify element, added notifications display and dismissal to my-app.html added guuey-notify to su goals and su care review. updates on test page to see notifications in action. revealed suIndexData in su-header to parent element for more detailed notification messages.

--- a/src/elements/su-header/su-header.html
+++ b/src/elements/su-header/su-header.html
@@ -247,7 +247,8 @@ setimage(boolean)
         },
         suIndexData:{
           type:Object,
-          observer:"_computeHeaderName"
+          observer:"_computeHeaderName",
+          notify:true
         },
         setimage:{
           type:Boolean,
