--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -26,4 +26,6 @@
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner.html" />
 <link rel="import" href="../bower_components/paper-progress/paper-progress.html" />
 <link rel="import" href="../bower_components/paper-input/paper-input.html" />
+<link rel="import" href="../bower_components/paper-menu-button/paper-menu-button.html" />
+<link rel="import" href="../bower_components/paper-menu/paper-menu.html" />
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
