--- a/src/my-app.html
+++ b/src/my-app.html
@@ -293,7 +293,7 @@
         <app-header id="appHeader" condenses reveals effects="waterfall">
           <span hidden="{{!loginPageInactive(page)}}">
             <app-toolbar>
-
+              <paper-badge id="notifyBadge" for="notifyButton" label="[[notifyCount]]"></paper-badge>
               <div class="toolbarLeft">
                 <paper-icon-button class="toolbarButton" icon="menu" on-tap="toggleDrawer"></paper-icon-button>
                 <span class="menuText">menu</span>
@@ -301,9 +301,20 @@
               </div>
 
               <div class="toolbarRight">
-                <a class="inherit" href="/{{home}}/default/def-home"><paper-icon-button class="toolbarButton" icon="icons:home"></paper-icon-button></a>
-                <paper-icon-button class="toolbarButton" id="notifyButton" icon="social:notifications"></paper-icon-button>
-                <paper-badge id="notifyBadge" for="notifyButton" label="[[notifyCount]]"></paper-badge>
+                <a class="inherit" href="/[[home]]/default/def-home"><paper-icon-button class="toolbarButton" icon="icons:home"></paper-icon-button></a>
+                <paper-menu-button id="notifyDropDown" horizontal-align="right" vertical-align="top" no-overlap ignore-select>
+                  <paper-icon-button class="toolbarButton dropdown-trigger" id="notifyButton" icon="social:notifications"></paper-icon-button>
+                  <paper-menu class="dropdown-content">
+                  <template is="dom-repeat" items="[[notifiesData]]" as="notification">
+                      <paper-item>[[notification.message]]</paper-item>
+                      <paper-button on-tap="dismissNotification">dismiss</paper-button>
+                      <a style="text-decoration:none;" class="inherit" href="[[notification.url]]"><paper-button>go there</paper-button></a>
+                  </template>
+
+                  </paper-menu>
+                </paper-menu-button>
+
+
                 <paper-icon-button class="toolbarButton logoutButton" on-tap="logout" icon="icons:account-circle"></paper-icon-button>
               </div>
 
@@ -675,6 +686,18 @@
           .on("value",function(snapshot){
             var count=snapshot.numChildren();
             this.notifyCount=count;
+          }.bind(this));
+      },
+      dismissNotification:function(e){
+        var data=e.model.notification;
+        var key=e.model.notification.$key;
+        delete data.$key;
+        this.$.notifiableDB.path=null;
+        this.$.notifiableDB.data=data;
+        this.$.notifiableDB.save("/homes/"+this.home+"/notifications/notified", key)
+          .then(function(){
+            this.$.notifiableDB.path="/homes/"+this.home+"/notifications/notify/"+key;
+            this.$.notifiableDB.destroy();
           }.bind(this));
       }
     });
