--- a/src/pages/test/test-test/dependencies.html
+++ b/src/pages/test/test-test/dependencies.html
@@ -6,3 +6,5 @@
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../../../../bower_components/paper-time-picker/paper-time-picker.html" />
 <link rel="import" href="../../../../bower_components/paper-date-picker/paper-date-picker.html" />
+<link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
+<link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
