added in firebase-storage element and behavior

--- a/src/pages/test/test-test/dependencies.html
+++ b/src/pages/test/test-test/dependencies.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-document.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-query.html" />
+<link rel="import" href="../../../../bower_components/polymerfire/firebase-app.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../../bower_components/iron-ajax/iron-ajax.html" />
 <link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
@@ -8,3 +9,4 @@
 <link rel="import" href="../../../../bower_components/paper-date-picker/paper-date-picker.html" />
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
+<link rel="import" href="../../../elements/firebase-storage/firebase-storage.html" />
