--- a/src/my-app.html
+++ b/src/my-app.html
@@ -8,7 +8,8 @@
       name="main"
       auth-domain="careplan-c2677.firebaseapp.com"
       database-url="https://careplan-c2677.firebaseio.com"
-      api-key="AIzaSyBdtmHIV_7epC0OBiXkTNoqrGRspA58Epc">
+      api-key="AIzaSyBdtmHIV_7epC0OBiXkTNoqrGRspA58Epc"
+      storage-bucket="careplan-c2677.appspot.com">
     </firebase-app>
     <!--SECONDARY APP FOR GETTING AROUND USER AUTO SIGN IN WHEN CREATING A NEW USER-->
     <firebase-app
