--- a/src/behaviors/firebase-storage-behavior.html
+++ b/src/behaviors/firebase-storage-behavior.html
@@ -41,6 +41,11 @@ https://github.com/firebase/polymerfire/blob/master/LICENSE
         progress: {
           type: Number,
           value: 0
+        },
+        url:{
+          type:String,
+          value:"",
+          notify:true
         }
       },
       __computeStorage: function(app) {
@@ -66,8 +71,24 @@ https://github.com/firebase/polymerfire/blob/master/LICENSE
           });
         }.bind(this));
       },
-      _downloadFile:function(file, metadata){
-        //need to put in the ref.get() function here later....
+      _downloadFile:function(file){
+        var downloadTask = this.storage.ref(file);
+        downloadTask.getDownloadURL().then(function(url){
+          //console.log(url);
+          this.url=url;
+      }.bind(this))
+        .catch(function(error){
+          //console.log(error);
+        });
+      },
+      _getMetadata:function(file){
+        this.storage.ref(file).getMetadata()
+          .then(function(metadata){
+            console.log(metadata);
+          })
+          .catch(function(error){
+            console.log(error);
+          });
       }
     };
     Polymer.FirebaseStorageBehavior = [
