--- a/src/pages/care-plan/su-medical/dependencies.html
+++ b/src/pages/care-plan/su-medical/dependencies.html
@@ -1,3 +1,7 @@
 <link rel="import" href="../../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../../bower_components/polymerfire/firebase-document.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
+<link rel="import" href="../../../../bower_components/polymerfire/firebase-query.html" />
+<link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
+<link rel="import" href="../../../elements/firebase-storage/firebase-storage.html" />
+<link rel="import" href="../../../elements/su-header/su-header.html" />
